# 2026-LLM-Zoomcamp

./: .gitignore  HW1.ipynb  LICENSE  README.md  main.py  pyproject.toml
