[project]
name = "2026-llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.0.8",
    "openai>=2.43.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "toyaikit>=0.0.11",
]
